@@ -1,0 +1,16 @@
+<Combine name="MonoDevelop.Debugger" fileversion="2.0">
+  <Configurations active="Debug">
+    <Configuration name="Debug" ctype="CombineConfiguration">
+      <Entry build="True" name="MonoDevelop.Debugger.Gdb" configuration="Debug" />
+    </Configuration>
+    <Configuration name="Release" ctype="CombineConfiguration">
+      <Entry build="True" name="MonoDevelop.Debugger.Gdb" configuration="Release" />
+    </Configuration>
+  </Configurations>
+  <StartMode startupentry="MonoDevelop.Debugger.Gdb" single="True">
+    <Execute type="None" entry="MonoDevelop.Debugger.Gdb" />
+  </StartMode>
+  <Entries>
+    <Entry filename="MonoDevelop.Debugger.mdp" />
+  </Entries>
+</Combine>
